# OpenUO-Launcher

./: .gitignore  Cargo.toml  LICENSE.rtf  README.md  README.zh-CN.md  build-linux.sh  build-macos-app-wrapper.sh  build-macos-app.sh  build-windows-installer.bat  build-windows-msi.bat  build.bat  build.rs  build.sh  check-icons.bat  check-icons.sh  installer.iss  installer.wxs  update_source.example.json
.github/workflows/: release.yml
assets/: icon.icns
docs/: I18N.md  ICON.md  ICON_SUMMARY.md  WINDOWS_INSTALLER.md
docs/examples/: launcher-latest.json  openuo-latest.json
locales/: README.md  en.yml  languages.json  zh-CN.yml
src/: config.rs  crypter.rs  encryption_helper.rs  github.rs  i18n.rs  main.rs  profile_editor.rs  system_info.rs  ui.rs  version_reader.rs
