[package]
name = "openuo-launcher"
version = "0.1.2"
edition = "2024"
authors = ["OpenUO Contributors"]
license = "BSD-2-Clause"
description = "Rust prototype launcher for OpenUO powered by winit + egui."

[dependencies]
anyhow = "1.0"
egui = "0.27"
egui-wgpu = { version = "0.27", default-features = false, features = ["winit"] }
egui-winit = "0.27"
pollster = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
winit = "0.29"
wgpu = { version = "=0.19.1", features = ["wgsl"] }
uuid = { version = "1.10", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "stream", "blocking"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rfd = "0.14"
image = { version = "0.24", default-features = false, features = ["png"] }
hostname = "0.4"
self-replace = "1.5"
rust-i18n = "3"
sys-locale = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console"
] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
